--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ body {
   z-index: 100;
   border-radius: 10px;
   transition: all 0.3s ease 0s;
-  background: url('../img/1613681960_47-p-fon-dlya-prezentatsii-boke-51.jpg') 75% 50%;
+  background: url('./img/1613681960_47-p-fon-dlya-prezentatsii-boke-51.jpg') 75% 50%;
 }
 .info.active {
   right: 10px;
